--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-toastify": "^11.0.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "use-sound": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
