--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "PickNPay",
-  "name": "",
+  "name": "PickNPay Food Ordering",
   "icons": [
     {
       "src": "favicon.ico",
